--- a/roles/test/tasks/main.yml
+++ b/roles/test/tasks/main.yml
@@ -1,8 +1,22 @@
-- name: test ping debug - group_vars all
+- name: test debug - group_vars all
   ansible.builtin.debug:
     msg: test debug log    all - {{ active_profile }}
 
-- name: test ping debug - group_vars all
+- name: test debug - group_vars all
   ansible.builtin.debug:
     msg: test debug log    otherKey1 - {{ otherKey1 }}
 
+- name: test jinja2
+  ansible.builtin.template:
+    src: test/test-jinja.config.j2
+    dest: test-jinja.config
+
+- name: test copy
+  ansible.builtin.copy:
+    src: /var/lib/awx/projects/data-files/test-copy
+    dest: test/test-copy
+
+- name: test synchronize
+  ansible.posix.synchronize:
+    src: /var/lib/awx/projects/data-files/test-sync
+    dest: test/test-sync
