--- a/roles/test/tasks/main.yml
+++ b/roles/test/tasks/main.yml
@@ -21,4 +21,12 @@
     mode: 0600
     group: vmuser
     owner: vmuser
+    force: false
 
+- name: test uuid - create
+  shell: uuidgen
+  register: test_uuid
+
+- name: test uuid - log
+  ansible.builtin.debug:
+    msg: "{{ test_uuid['stdout'] }}"
