--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,8 @@
 [defaults]
 ask_pass = false
-
+#remote_user = vmuser
 
 [privilege_escalation]
 become = true
 become_method = sudo
 become_user = root
-become_ask_pass = false
-
