--- a/roles/test/tasks/main.yml
+++ b/roles/test/tasks/main.yml
@@ -1,37 +1,11 @@
-- name: test debug - group_vars all
-  ansible.builtin.debug:
-    msg: test debug log    all - {{ active_profile }}
+# roles/test/main.yml
 
-- name: test debug - group_vars all
-  ansible.builtin.debug:
-    msg: test debug log    otherKey1 - {{ otherKey1 }}
+- include_tasks: test-vars.yml
 
-- name: test become pwd
-  ansible.builtin.apt:
-    name: curl
-    state: present
+- include_tasks: test-jinja2.yml
 
-- name: test jinja2
-  ansible.builtin.template:
-    src: test/test-jinja.config.j2
-    dest: test-jinja.config
-    mode: 0640
-    group: vmuser
-    owner: vmuser
+- include_tasks: test-uuid.yml
 
-- name: test copy
-  ansible.builtin.copy:
-    src: /var/lib/awx/projects/data-files/test-copy
-    dest: test
-    mode: 0600
-    group: vmuser
-    owner: vmuser
-    force: false
+- include_tasks: test-copy.yml
 
-- name: test uuid - create
-  shell: uuidgen
-  register: test_uuid
-
-- name: test uuid - log
-  ansible.builtin.debug:
-    msg: "{{ test_uuid['stdout'] }}"
+- include_tasks: test-become.yml
