--- a/roles/test/tasks/main.yml
+++ b/roles/test/tasks/main.yml
@@ -1,7 +1,6 @@
-# roles/test/main.yml
+# roles/test/tasks/main.yml
 
 - include_tasks: test-vars.yml
-  hosts: all
 
 - include_tasks: test-jinja2.yml
 
