--- a/roles/test/tasks/test-vars.yml
+++ b/roles/test/tasks/test-vars.yml
@@ -1,3 +1,5 @@
+# roles/test/tasks/test-vars.yml
+
 - name: test debug - group_vars all
   ansible.builtin.debug:
     msg: test debug log    all - {{ active_profile }}
@@ -5,3 +7,8 @@
 - name: test debug - group_vars all
   ansible.builtin.debug:
     msg: test debug log    otherKey1 - {{ otherKey1 }}
+
+- name: test debug - group_vars all
+  ansible.builtin.debug:
+    msg: test loop group - {{ item }} - {{ hostvars[item]['inventory_hostname'] }} - {{ hostvars[item]['ansible_host'] }}
+  loop: "{{ groups['k8s'] }}"
