--- a/roles/ssh-key-copy/tasks/main.yml
+++ b/roles/ssh-key-copy/tasks/main.yml
@@ -1,5 +1,5 @@
 # roles/sshkey-copy/tasks/main.yml
 
-- include_tasks: sshkey-gen.yml
+- include_tasks: ssh-key-gen.yml
 
-- include_tasks: sshkey-copy.yml
+- include_tasks: ssh-key-copy.yml
