--- a/roles/ssh-key-remove/tasks/main.yml
+++ b/roles/ssh-key-remove/tasks/main.yml
@@ -2,5 +2,8 @@
 
 - name: remove ssh key file
   ansible.builtin.file:
-    path: "{{ ssh_file }}"
+    path: "{{ item }}"
     state: absent
+  with_items:
+  - "{{ ssh_file }}"
+  - "{{ ssh_file }}.pub"
