--- a/roles/ssh-key-remove-remote/tasks/main.yml
+++ b/roles/ssh-key-remove-remote/tasks/main.yml
@@ -6,8 +6,15 @@
     path: ~/.ssh/authorized_keys
   register: authorized_keys
 
+#- name: remove ssh key
+#  become: false
+#  ansible.builtin.command:
+#    cmd: sed '/{{ ssh_id }}/d' -i ~/.ssh/authorized_keys
+#  when: authorized_keys.stat.exists
+
 - name: remove ssh key
   become: false
-  ansible.builtin.command:
-    cmd: sed '/{{ ssh_id }}/d' -i ~/.ssh/authorized_keys
-  when: authorized_keys.stat.exists
+  ansible.builtin.lineinfile:
+    path: ~/.ssh/authorized_keys
+    state: absent
+    regexp: "{{ ssh_id }}$"
