--- a/roles/test/tasks/test-when.yml
+++ b/roles/test/tasks/test-when.yml
@@ -8,20 +8,20 @@
 - name: test when - hostvars - equals
   ansible.builtin.command:
     cmd: echo {{ test_when }}
-  when: test_when.stdout == hostvars[inventory_hostname]['test_when']
+  when: test_when.stdout == "" + hostvars[inventory_hostname]['test_when']
 
 - name: test when - hostvars - not equals
   ansible.builtin.command:
     cmd: echo {{ test_when }}
-  when: test_when.stdout != hostvars[inventory_hostname]['test_when']
+  when: test_when.stdout != test_when
 
 - name: test when - var name - equals
   ansible.builtin.command:
     cmd: echo {{ test_when }}
-  when: test_when.stdout == test_when
+  when: test_when.stdout == "test"|join("When")
 
 - name: test when - var name - not equals
   ansible.builtin.command:
     cmd: echo {{ test_when }}
-  when: test_when.stdout != test_when
+  when: test_when.stdout != "test_when"|join(test_when)
 
