--- a/roles/test/tasks/test-when.yml
+++ b/roles/test/tasks/test-when.yml
@@ -18,10 +18,10 @@
 - name: test when - var name - equals
   ansible.builtin.command:
     cmd: echo {{ test_when }}
-  when: test_when.stdout == "test"|join("When")
+  when: test_when.stdout == test_str1|join(test_str2)
 
 - name: test when - var name - not equals
   ansible.builtin.command:
     cmd: echo {{ test_when }}
-  when: test_when.stdout != "test_when"|join(test_when)
+  when: test_when.stdout != "test"|join(test_str2)
 
