--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,6 @@ ask_pass = false
 
 [privilege_escalation]
 become = true
-become_method = sudo
-become_user = root
+#become_method = sudo
+#become_user = root
 become_ask_pass = true
