--- a/roles/test/tasks/test-become.yml
+++ b/roles/test/tasks/test-become.yml
@@ -2,15 +2,13 @@
 
 - name: check home - become false
   become: false
-  ansible.builtin.stat:
-    path: "echo %HOME"
-  register: check_home_false
+  ansible.builtin.command:
+    cmd: "echo %HOME"
 
 - name: check home - become true
   become: true
-  ansible.builtin.stat:
-    path: "echo %HOME"
-  register: check_home_true
+  ansible.builtin.command:
+    cmd: "echo %HOME"
 
 - name: test become pwd
   ansible.builtin.apt:
