--- a/roles/user-config/tasks/main.yml
+++ b/roles/user-config/tasks/main.yml
@@ -3,5 +3,6 @@
 - name: change password
   ansible.builtin.user:
     name: "{{ vm_usr }}"
-    password: "{{ vm_pwd_test | password_hash('sha512') }}"
+    update_password: always
+    password: "{{ vm_pwd_test }} | password_hash('sha512')"
     state: present
