--- a/roles/user-config/tasks/main.yml
+++ b/roles/user-config/tasks/main.yml
@@ -4,5 +4,5 @@
   ansible.builtin.user:
     name: "{{ vm_usr }}"
     update_password: always
-    password: "{{ vm_pwd_test }} | password_hash('sha512')"
+    password: '{{ vm_pwd_test | password_hash("sha512") }}'
     state: present
